--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,8 +1,8 @@
 spring.application.name=employerestapi
-spring.datasource.url=jdbc:mysql://localhost:3306/employeedb
+spring.datasource.url=jdbc:mysql://awsdb.czsi8o22kr30.eu-north-1.rds.amazonaws.com:3306/employeedb
 spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
 spring.datasource.username=root
-spring.datasource.password=Shan@8796
+spring.datasource.password=shan8796
 spring.jpa.hibernate.dialect = org.hibernate.dialect.MySQL8Dialect
 spring.jpa.hibernate.ddl-auto = update
 spring.jpa.show-sql = true
